kubernetes/base/namespace.yaml
# Kubernetes namespace "centmatch"

apiVersion: v1
kind: Namespace
metadata:
  name: centmatch
  labels:
    app: centmatch
