kubernetes/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: centmatch
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
status: {}
