kubernetes/base/solver-service.yaml
# Kubernetes service with the name solver-service in namespace centmatch on port 80

apiVersion: v1
kind: Service
metadata:
  name: solver-service
  namespace: centmatch
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: solver
status: {}
