kubernetes/base/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: frontend-ingress
  namespace: centmatch
spec:
  tls:
    - hosts:
        - centmatch.arz.st
      secretName: wildcard
  rules:
    - host: centmatch.arz.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
