kubernetes/base/solver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: solver-ingress
  namespace: papsolvue
spec:
  tls:
    - hosts:
        - solver.awesomium.de
      secretName: wildcard
  rules:
    - host: solver.awesomium.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solver-service
                port:
                  number: 80
